This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: test_importlib is leaking references
Type: Stage: resolved
Components: Tests Versions: Python 3.9
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: dino.viehland Nosy List: brett.cannon, christian.heimes, dino.viehland, matrixise, miss-islington, pablogsal, xtreak
Priority: normal Keywords: patch

Created on 2019-09-12 13:37 by pablogsal, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 16053 merged dino.viehland, 2019-09-12 14:19
Messages (5)
msg352162 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2019-09-12 13:37
❯ ./python.exe -m test test_importlib -R 3:3
Run tests sequentially
0:00:00 load avg: 1.45 [1/1] test_importlib
beginning 6 repetitions
123456
......
test_importlib leaked [20, 20, 20] references, sum=60
test_importlib failed

== Tests result: FAILURE ==

1 test failed:
    test_importlib

Total duration: 23 sec 179 m
msg352165 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2019-09-12 14:00
Bisecting points to

commit 5b172c27f760dc5437e37dd8f1540eb76440e9a7
Author: Dino Viehland <dinoviehland@fb.com>
Date:   Wed Sep 11 08:47:17 2019 -0700

    bpo-38113: Update Python/ast.c to PEP-384 (GH-15975)



    Removes statics for better subinterpreter support and moves to _PyType_Name


    https://bugs.python.org/issue38113



    Automerge-Triggered-By: @tiran
msg352166 - (view) Author: Karthikeyan Singaravelan (xtreak) * (Python committer) Date: 2019-09-12 14:03
Using test.bisect_cmd gets me to below test case


test_importlib leaked [1, 1, 1] references, sum=3
test_importlib failed

== Tests result: FAILURE ==

1 test failed:
    test_importlib

Total duration: 3 sec 582 ms
Tests result: FAILURE
ran 1 tests/2
exit 2
Tests failed: continuing with this subtest

Tests (1):
* test.test_importlib.source.test_source_encoding.Source_EncodingTestPEP451.test_default_encoding

Bisection completed in 17 iterations and 0:01:51
msg352182 - (view) Author: miss-islington (miss-islington) Date: 2019-09-12 14:38
New changeset 8d88e8c662a80c186c7a0e67f1c1f3d4010276f8 by Miss Islington (bot) (Dino Viehland) in branch 'master':
bpo-38138: Fix memory leak introduced by interned strings (GH-16053)
https://github.com/python/cpython/commit/8d88e8c662a80c186c7a0e67f1c1f3d4010276f8
msg352186 - (view) Author: Stéphane Wirtel (matrixise) * (Python committer) Date: 2019-09-12 14:41
I close the issue, I have tested with 3.8, there is no leaks with test_importlib, nice ;-)

Thanks Dino
History
Date User Action Args
2022-04-11 14:59:20adminsetgithub: 82319
2019-09-12 14:48:49pablogsalsettitle: test_importleak is leaking references -> test_importlib is leaking references
2019-09-12 14:41:40matrixisesetstatus: open -> closed

nosy: + matrixise
messages: + msg352186

resolution: fixed
stage: patch review -> resolved
2019-09-12 14:38:17miss-islingtonsetnosy: + miss-islington
messages: + msg352182
2019-09-12 14:19:26dino.viehlandsetkeywords: + patch
stage: patch review
pull_requests: + pull_request15676
2019-09-12 14:13:33dino.viehlandsetassignee: dino.viehland
2019-09-12 14:03:02xtreaksetnosy: + xtreak
messages: + msg352166
2019-09-12 14:00:12pablogsalsetnosy: + christian.heimes, dino.viehland
messages: + msg352165
2019-09-12 13:37:39pablogsalcreate