bpo-38138: Fix memory leak introduced by interned strings (GH-16053)

Interned string needs to be decref'd



https://bugs.python.org/issue38138



Automerge-Triggered-By: @matrixise